--- a/web/css/site.css
+++ b/web/css/site.css
@@ -1,13 +1,14 @@
 html,
 body {
     height: 100%;
+    font-family: 'Open Sans', Arial, Helvetice Neue, sans-serif;
 }
 
 .wrap {
     min-height: 100%;
     height: auto;
-    margin: 0 auto -60px;
-    padding: 0 0 60px;
+    margin: 0 auto -321px;
+    padding: 0 0 321px;
 }
 
 .wrap > .container {
@@ -15,10 +16,94 @@ body {
 }
 
 .footer {
-    height: 60px;
-    background-color: #f5f5f5;
-    border-top: 1px solid #ddd;
+
+}
+
+.footer-top {
+    background: #FCE67B none repeat scroll 0 0;
+    height: 100px;
+    color: #ffffff;
+    position: relative;
+
+}
+
+.footer-top:before {
+    content: "";
+    position: absolute;
+    height: 128px;
+    width: 44%;
+    top: -28px;
+    left: 0;
+    right: auto;
+    background: #e67e22;
+
+}
+
+.footer-top:after {
+    -moz-border-bottom-colors: none;
+    -moz-border-left-colors: none;
+    -moz-border-right-colors: none;
+    -moz-border-top-colors: none;
+    -o-border-image: none;
+    border-image: none;
+    border-style: solid;
+    /*border-width: 24px 10px;*/
+    content: "";
+    height: 5px;
+    position: absolute;
+    right: 43%;
+    top: -28px;
+    width: 0;
+    left: 44%;
+    border-width: 64.5px 31px;
+    border-color: rgba(0, 0, 0, 0) rgba(0, 0, 0, 0) #e67e22 #e67e22;
+}
+
+.footer-top img {
+    padding-left: 15px;
+}
+
+.footer-top > .container {
+    padding: 30px 0;
+}
+
+.footer-middle {
+    background-color: #ff7600;
     padding-top: 20px;
+    padding-bottom: 20px;
+    color: #fff;
+    border-top: 1px solid #d35400;
+}
+
+.foo-company {
+    margin-bottom: 10px;
+    padding-bottom: 10px;
+    color: #2b2a29;
+    font-weight: 600;
+}
+
+.footer-bottom {
+    height: 40px;
+    background-color: #fce67b;
+    color: #000;
+    font-size: 14px;
+    font-weight: 600;
+    border-top: 1px solid #fff;
+    padding-top: 10px;
+}
+
+.menu-list-white {
+    -webkit-padding-start: 0px;
+    list-style-type: none;
+}
+
+.menu-list-white li {
+    padding-bottom: 5px;
+    font-weight: 600;
+}
+
+.menu-list-white a {
+    color: #fff;
 }
 
 .jumbotron {
@@ -96,9 +181,9 @@ a.desc:after {
     border: none;
 }
 
-@media(max-width:767px) {
+@media (max-width: 767px) {
     .nav li > form > button.logout {
-        display:block;
+        display: block;
         text-align: left;
         width: 100%;
         padding: 10px 15px;
@@ -112,4 +197,12 @@ a.desc:after {
 
 .nav > li > form > button.logout:focus {
     outline: none;
+}
+
+/*Adaptive*/
+@media screen and (max-width: 650px) {
+
+}
+@media screen and (max-width: 480px) {
+
 }
