--- a/web/css/partners.css
+++ b/web/css/partners.css
@@ -1,3 +1,17 @@
+@font-face {
+    font-family: 'PT Sans Ruble';
+    src: url(fonts/pt-sans-ruble-400.woff) format('woff');
+    font-style: normal;
+    font-weight: 400
+}
+
+@font-face {
+    font-family: 'PT Sans Ruble';
+    src: url(fonts/pt-sans-ruble-700.woff) format('woff');
+    font-style: normal;
+    font-weight: 700
+}
+
 .ruble {
     font-family: 'PT Sans Ruble';
     text-transform: lowercase;
@@ -16,18 +30,10 @@ table {
 
 }
 
-.table-bordered > thead > tr > th:last-child {
-    padding-left: 32px;
-}
-
 th:first-child, td:first-child {
     text-align: center;
 }
-
-td:first-child, td:last-child {
-    /* background: #f5f5f5; */
-}
-
+/*Store*/
 .store-th {
     width: 30%;
     min-width: 200px;
@@ -35,8 +41,6 @@ td:first-child, td:last-child {
 
 .store-hidden {
     cursor: pointer;
-    width: 100%;
-    min-width: 210px;
 }
 
 .store-hidden .all-store {
@@ -48,13 +52,7 @@ td:first-child, td:last-child {
     text-decoration: none;
 }
 
-.all-store > .row {
-    margin-right: 0;
-    margin-left: 0;
-
-}
-
-.circule {
+.circle {
     height: 15px;
     width: 15px;
     display: inline-block;
@@ -80,69 +78,11 @@ td:first-child, td:last-child {
     background-color: #75c05d;
 }
 
-/*Order*/
-.order-nick hr {
-    background: url("../images/thread.png") repeat-x scroll 0 bottom rgba(0, 0, 0, 0);
-    font-size: 16px;
-    margin: 0 20px;
-    padding-bottom: 20px;
-}
-
-.number-order {
-    font-size: 20px;
-}
-
-/*Cart*/
-#blockbody {
-    width: 800px;
-    height: auto;
-    margin: 50px auto;
-}
-
-#block-content {
-    width: 600px;
-    height: auto;
-}
-
-.number {
-    max-width: 150px;
-    min-width: 120px;
-}
-
-.cart {
-    width: 100%;
-}
-
-.shopping_list {
-    width: 100%;
-}
-
-.all-sum {
-    float: right;
-    font-size: 18px;
-}
-
-.all-sum > div {
-    display: inline-block;
-}
-
-#all-sum-price {
-    font-weight: 600;
-}
-
-.in-cart > .btn {
-    min-width: 150px;
-    height: 40px;
-    font-size: 16px;
-}
-
-/*Cart_END*/
-
-/*bootsrap*/
+/*Bootstrap reload*/
 .well {
     padding: 10px;
-    background-color: #ffffff;
-    border: 1px solid #ffffff;
+    background-color: #fff;
+    border: 1px solid #fff;
     -webkit-box-shadow: inset 0 6px 1px rgba(0, 0, 0, .05);
     box-shadow: inset 0 6px 1px rgba(0, 0, 0, .05);
     margin-bottom: 0;
@@ -161,4 +101,51 @@ td:first-child, td:last-child {
 
 .alert {
     font-size: 16px;
+}
+
+.alert-success {
+    color: #000000;
+    background-color: #FCE67B;
+    border-color: #f0ad4e;
+}
+
+.alert-info {
+    color: #1E2023;
+    background-color: #fff;
+    border-color: #f0ad4e;
+}
+
+.nav-tabs.nav-justified > .active > a,
+.nav-tabs.nav-justified > .active > a:hover,
+.nav-tabs.nav-justified > .active > a:focus {
+    border-bottom-color: #f2c789;
+    background: #f0ad4e;
+    color: #fff;
+}
+
+.badge {
+    background-color: #f0ad4e;
+    font-size: 14px;
+}
+
+.nav a {
+    color: #444;
+    text-decoration: none;
+    /*font-weight: 600;*/
+
+}
+
+.table > thead > tr.warning > th {
+    background-color: #FCE67B;
+    border-bottom: 2px solid #f5f5f5;
+}
+
+.btn-danger {
+    color: #fff;
+    background-color: #ff7600;
+    border-color: #ff7600;
+}
+
+#nick-table thead > tr {
+    background-color: #eee;
 }
